<resources>
    <string name="app_name">SQLiteDemo</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="input_id">Input id</string>
    <string name="input_name">Input name</string>
    <string name="input_price">Input Price</string>
    <string name="input_number">Input number</string>
    <string name="show_list">Show List</string>
</resources>